# novel-parser

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.migration.yml  docker-compose.yml  docker-run.sh  main.py  migrate_db.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build-push.yml
app/: __init__.py  models.py
app/api/: novel_api.py
app/parser/: epub_parser.py  file_monitor.py  novel_parser.py
app/storage/: novel_storage.py
src/novel_parser/: __init__.py  config.py  main.py
src/novel_parser/api/: __init__.py  novel_api.py
src/novel_parser/core/: __init__.py  file_reader.py
src/novel_parser/models/: __init__.py  base.py
src/novel_parser/parser/: __init__.py  epub_parser.py  file_monitor.py  novel_parser.py  txt_parser.py
src/novel_parser/storage/: __init__.py  database_interface.py  novel_storage.py  postgresql_storage.py  sqlite_storage.py
