[project]
name = "novel-parser"
version = "0.1.0"
description = "A system for parsing and monitoring TXT and EPUB novel files, with FastAPI for searching and retrieving novel content"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "watchdog>=2.1.6",
    "ebooklib>=0.18.0",
    "beautifulsoup4>=4.12.2",
]
